# BOL-Scraper

./: .env.example  .gitignore  README.md  pyproject.toml
src/bol_scraper/: cache.py  cli.py  config.py  export.py  extract_llm.py  extract_rules.py  google_maps.py  models.py  ocr.py  pdf_render.py  pipeline.py  vision_preprocess.py
